samples/_failures_safe/1761409985_e72001_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fe2c88c.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_8fe2c88c.c:179:35: error: missing terminating " character
  179 |         case TOKEN_STRING: return "STRING
      |                                   ^~~~~~~
./samples/SAFE/__tmp_8fe2c88c.c:179:9: error: expected expression at end of input
  179 |         case TOKEN_STRING: return "STRING
      |         ^~~~
./samples/SAFE/__tmp_8fe2c88c.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fe2c88c.c:179:9: error: expected declaration or statement at end of input
